--- a/app/src/components/Draggable/kanban.scss
+++ b/app/src/components/Draggable/kanban.scss
@@ -1,6 +1,6 @@
 .kanban {
   display: flex;
-  width: auto;
+  width: 100%;
   align-items: flex-start;
   overflow-x: auto;
   overflow-y: hidden;
