--- a/app/src/components/GlobalInfos/GlobalInfos.scss
+++ b/app/src/components/GlobalInfos/GlobalInfos.scss
@@ -18,6 +18,7 @@
   max-height: 100%;
   position: relative;
   overflow-y: auto;
+  overflow-x: hidden;
   color: var(--font-color);
   background: transparent;
 }
